# rust_test

./: Cargo.toml
src/: actor.rs  reqwest.rs
